src/main/java/com/demo/test/error/learnbook.text
当发生错误的时候，应该做到以下几点
1，像用户通知错误
2，保存所有的工作结果
3，允许用户以妥善的形式退出程序


断言可以选择的启用检测（不懂）